--- a/ScottsExamples/WeatherApp/app/src/main/res/layout-land/activity_main.xml
+++ b/ScottsExamples/WeatherApp/app/src/main/res/layout-land/activity_main.xml
@@ -10,11 +10,11 @@
         android:id="@+id/getWeatherBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
         android:onClick="getWeatherBtn"
         android:text="@string/getWeatherBtn"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editTextZip"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -56,11 +56,9 @@
         android:id="@+id/tempRange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tempView"
         app:layout_constraintTop_toBottomOf="@+id/dateLocationSentence" />
 
@@ -68,9 +66,9 @@
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="247dp"
+        android:layout_marginTop="24dp"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextZip" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/getWeatherBtn"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
