--- a/ScottsExamples/JSON-demos/WeatherApp/app/src/main/res/layout/activity_main.xml
+++ b/ScottsExamples/JSON-demos/WeatherApp/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:onClick="getWeatherBtn"
+        android:onClick="getWeatherUrl"
         android:text="@string/getWeatherBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
