--- a/ScottsExamples/JetpackDataBindingV2/app/src/main/res/layout/main_fragment.xml
+++ b/ScottsExamples/JetpackDataBindingV2/app/src/main/res/layout/main_fragment.xml
@@ -31,8 +31,10 @@
 
         <EditText
             android:id="@+id/inputValue"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:autofillHints=""
             android:ems="10"
             android:hint="@string/enter_text_here"
