--- a/BookExamples/41_NavigationDemoV2/app/src/main/res/navigation/navigation_graph.xml
+++ b/BookExamples/41_NavigationDemoV2/app/src/main/res/navigation/navigation_graph.xml
@@ -24,6 +24,10 @@
             android:name="message"
             app:argType="string"
             android:defaultValue="No Message" />
+        <argument
+            android:name="number"
+            app:argType="integer"
+            android:defaultValue="0" />
 
 
     </fragment>
