--- a/BookExamples/49_cardDemoV2/app/src/main/res/layout/activity_main.xml
+++ b/BookExamples/49_cardDemoV2/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="686dp"
+        android:layout_marginTop="50dp" />
 
     <!-- DID NOT NEED THESE -->
     <!--<include layout="@layout/content_main" />-->
