--- a/scotts_kotlin_examples/layout_examples/app/src/main/res/layout/barriers.xml
+++ b/scotts_kotlin_examples/layout_examples/app/src/main/res/layout/barriers.xml
@@ -34,15 +34,17 @@
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="@id/barrier3"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.301" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="right"
-        app:constraint_referenced_ids="textView1,textView2"
+        app:constraint_referenced_ids="textView1"
         tools:layout_editor_absoluteX="178dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
