--- a/scotts_kotlin_examples/layout_examples/app/src/main/res/layout/group.xml
+++ b/scotts_kotlin_examples/layout_examples/app/src/main/res/layout/group.xml
@@ -9,7 +9,7 @@
         android:id="@+id/group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:constraint_referenced_ids="textView4,textView5" />
 
     <TextView
@@ -51,4 +51,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
