--- a/scotts_kotlin_examples/TwoWayDataBinding/app/src/main/res/layout/main_fragment.xml
+++ b/scotts_kotlin_examples/TwoWayDataBinding/app/src/main/res/layout/main_fragment.xml
@@ -21,8 +21,7 @@
         android:autofillHints=""
         android:ems="10"
         android:text="@={myViewModel.inputText}"
-
-        android:onTextChange="@{() -> myViewModel.changeText()}"
+        android:onTextChanged="@{() -> myViewModel.changeText()}"
         android:hint="@string/inputText"
         android:inputType="textPersonName"
         android:minHeight="48dp"
