--- a/scotts_kotlin_examples/layout_examples/app/src/main/res/layout/group.xml
+++ b/scotts_kotlin_examples/layout_examples/app/src/main/res/layout/group.xml
@@ -50,6 +50,7 @@
         android:text="@string/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
