--- a/scotts_kotlin_examples/layout_examples/app/src/main/res/layout/barriers.xml
+++ b/scotts_kotlin_examples/layout_examples/app/src/main/res/layout/barriers.xml
@@ -20,7 +20,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:text="@string/textview2"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="right"
-        app:constraint_referenced_ids="textView1"
+        app:constraint_referenced_ids="textView1,textView2"
         tools:layout_editor_absoluteX="178dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
