--- a/scotts_kotlin_examples/layout_examples/app/src/main/res/layout/barriers.xml
+++ b/scotts_kotlin_examples/layout_examples/app/src/main/res/layout/barriers.xml
@@ -44,7 +44,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="right"
-        app:constraint_referenced_ids="textView1,textView2"
-        tools:layout_editor_absoluteX="178dp" />
+        app:constraint_referenced_ids="textView1,textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
